--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ repository = "https://github.com/DataDog/kafka-serde"
 homepage = "https://github.com/DataDog/kafka-serde"
 keywords = ["serde", "kafka"]
 categories = ["Encoding", "Database Interfaces"]
+license = "Apache-2.0 OR MIT"
 readme = "README.md"
 
 [dependencies]
